# darya

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  error.rs  event.rs  icons.rs  lib.rs  main.rs  perf_log.rs  profiler.rs  ui.rs  watcher.rs
src/planet/: mod.rs  renderer.rs  sprites.rs  types.rs
src/session/: manager.rs  mod.rs  pty_session.rs
src/sidebar/: mod.rs  tree.rs  types.rs
src/widgets/: branch_switcher.rs  command_palette.rs  diff_view.rs  editor.rs  file_explorer.rs  fuzzy_finder.rs  git_blame.rs  git_log.rs  git_status.rs  help_overlay.rs  mod.rs  notes_editor.rs  notes_preview.rs  planet_widget.rs  search_results.rs  split_picker.rs  status_bar.rs  terminal_panel.rs  theme_picker.rs  todo_board.rs  worktree_list.rs
src/worktree/: manager.rs  types.rs
tasks/: todo.md
tests/: app_state.rs  components.rs  mouse_selection.rs  pty_callbacks.rs  setup_guide.rs  snapshots.rs
tests/helpers/: mod.rs
tests/snapshots/: snapshots__command_palette_filtered.snap  snapshots__command_palette_filtered.snap.new  snapshots__command_palette_open.snap  snapshots__command_palette_open.snap.new  snapshots__diff_view_with_changes.snap  snapshots__diff_view_with_changes.snap.new  snapshots__file_explorer_with_git_indicators.snap  snapshots__full_layout_default.snap  snapshots__full_layout_default.snap.new  snapshots__git_blame_view.snap  snapshots__git_blame_view.snap.new  snapshots__git_log_view.snap  snapshots__git_log_view.snap.new  snapshots__git_log_with_file_filter.snap  snapshots__git_log_with_file_filter.snap.new  snapshots__git_status_sidebar_mixed.snap  snapshots__help_overlay_diff_view.snap  snapshots__help_overlay_diff_view.snap.new  snapshots__help_overlay_git_blame.snap  snapshots__help_overlay_git_blame.snap.new  snapshots__help_overlay_git_log.snap  snapshots__help_overlay_git_log.snap.new  snapshots__help_overlay_git_status.snap  snapshots__help_overlay_terminal.snap  snapshots__help_overlay_terminal.snap.new  snapshots__help_overlay_worktrees.snap  snapshots__help_overlay_worktrees.snap.new  snapshots__mars_theme.snap  snapshots__mars_theme.snap.new  snapshots__sidebar_with_planet.snap  snapshots__sidebar_with_planet.snap.new  snapshots__split_focused_pane_highlighted.snap  snapshots__split_focused_pane_highlighted.snap.new  snapshots__split_two_panes.snap  snapshots__split_two_panes.snap.new  snapshots__split_two_panes_vertical.snap  (+9 more)
