[package]
name = "darya"
version = "0.1.0"
edition = "2021"
description = "A terminal workspace for developers who use git worktrees"
license = "MIT"
repository = "https://github.com/steventohme/darya"
readme = "README.md"
keywords = ["tui", "terminal", "git", "worktree", "workspace"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Steven Tohme"]
rust-version = "1.70"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-term = "0.3"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
futures = "0.3"
toml = "0.8"
edtui = { version = "0.11", features = ["syntax-highlighting"] }
nucleo-matcher = "0.3"
ignore = "0.4"
notify = "7"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
image = { version = "0.25", default-features = false, features = ["gif"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
